--- a/index.html
+++ b/index.html
@@ -131,10 +131,8 @@
 
                         </p>
                         <p>
-                          I am very passionate about nature. 
                           Outside the lab, I love hiking and rock climbing, or doing any activity that allows me to connect with the Earth. 
-                          I love wildlife photography and playing music. 
-                          <p>Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a>.</p>
+                          I love nature & wildlife photography and playing music. Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a>.
                         </p>
                         <p>
 
@@ -205,13 +203,15 @@
                         <ul>
                           <li> Genome Assembly </li>
                           <li> Transcriptomics </li>
+                          <li> Bioinformatics</li>
                           <li> Population Genomics </li>
-                          <li> Sustainable Agriculture and Crop Genomics </li>
+                          <li> Crop Genomics </li>
                           <li> Adaptation and Speciation </li>
                           <li> Conservation Biology </li>
                           <li> Tropical Ecology </li>
                           <li> Biogeography </li>
-                          <li> Bioinformatics and Software Development</li>
+                          <li> Software Development </li>
+                          
                           </ul>
                         </p>
                         <!--<p><a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos">My ResearchGate</a></p>-->
