--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github icon-style"></i></a>
                   <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/mattosjacq"
                     rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
-                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/jacqueline-de-mattos-briganti-75b750a3/"
+                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/jacqueline-mattos-75b750a3/"
                     rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </div>
               </div>
@@ -132,7 +132,7 @@
                         </p>
                         <p>
                           Outside the lab, I love hiking and rock climbing, or doing any activity that allows me to connect with the Earth. 
-                          I love nature & wildlife photography and playing music. Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a>.
+                          I love nature & wildlife photography and also playing music. Find my photography gallery <a href="https://www.flickr.com/photos/134298936@N08/">here</a>.
                         </p>
                         <p>
 
