--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                     rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
                   <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/jacqueline-mattos-75b750a3/"
                     rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.researchgate.net/profile/Jacqueline-S-De-Mattos"
+                    rel="tooltip" title="Follow me on ResearchGate"><i class="fa-brands fa-researchgate" aria-hidden="true"></i></a>
                 </div>
               </div>
             </div>
